product-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-v2
  namespace: ecommerce
spec:
  selector:
    app: product
    version: v2
  ports:
  - port: 80
    targetPort: 5678
